# nbimvr

./: README.md  conda.yaml  model.py  nbimvr.py  pyproject.toml
nbimvr/: nbimvr_client.py  nbimvr_client_async.py
tests/: test_nbimvr.py
